--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .corpo{
-    background-color: coral;
+    background-color: rgb(250, 108, 207);
 }
 .titulo{
-    font-size: 50px; color: aliceblue; background: red; text-align: center;
+    font-size: 50px; color: aliceblue; background: rgb(241, 3, 190); text-align: center;
 }
 .texto-imc{
     font-size: 50px;
